[package]
name = "tls-callback-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.4.1"
widestring = "1.0.2"
winapi = {version = "0.3.9", features = ["minwindef","memoryapi","processthreadsapi","errhandlingapi"]}
